--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   },
   "homepage": "https://github.com/capuchinojt/sample-mern-blog#readme",
   "dependencies": {
-    "express": "^4.18.3"
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
+    "moment-timezone": "^0.5.45",
+    "mongoose": "^8.2.1"
   }
 }
