--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node --watch api/index.js",
+    "start": "node api/index.js",
+    "dev": "nodemon api/index.js",
+    "watch": "node --watch api/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,9 +22,11 @@
   },
   "homepage": "https://github.com/capuchinojt/sample-mern-blog#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "moment-timezone": "^0.5.45",
-    "mongoose": "^8.2.1"
+    "mongoose": "^8.2.1",
+    "nodemon": "^3.1.0"
   }
 }
