--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
+    "@million/lint": "^0.0.73",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "flowbite-react": "^0.7.2",
