--- a/client/package.json
+++ b/client/package.json
@@ -15,12 +15,14 @@
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "flowbite-react": "^0.7.2",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
+    "vite-jsconfig-paths": "^2.0.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
