--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@million/lint": "^0.0.73",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
+    "firebase": "^10.9.0",
     "flowbite-react": "^0.7.2",
     "path": "^0.12.7",
     "react": "^18.2.0",
