--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "flowbite-react": "^0.7.2",
     "path": "^0.12.7",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
