--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@million/lint": "^0.0.73",
     "@reduxjs/toolkit": "^2.2.1",
+    "@tanstack/react-query": "^5.28.14",
     "axios": "^1.6.7",
     "firebase": "^10.9.0",
     "flowbite-react": "^0.7.2",
@@ -29,6 +30,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.28.11",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react-swc": "^3.5.0",
