--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.x]
+        node-version: [18.x, 20.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -29,7 +29,7 @@ jobs:
     - run: cd ./client
     - run: npm ci
     - run: npm run build --if-present
-    - run: npm test
+    #- run: npm test
 
     - name: Deploy 🚀
       uses: JamesIves/github-pages-deploy-action@v4
