--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,14 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://capuchinojt.github.io/sample-mern-blog/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
@@ -17,6 +20,7 @@
     "axios": "^1.6.7",
     "firebase": "^10.9.0",
     "flowbite-react": "^0.7.2",
+    "gh-pages": "^6.1.1",
     "lodash": "^4.17.21",
     "path": "^0.12.7",
     "react": "^18.2.0",
