--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,7 +33,7 @@ jobs:
 
     - name: Deploy 🚀
       #uses: JamesIves/github-pages-deploy-action@v4
-      run: npm run deploy
+    - run: npm run deploy
       env:
         VITE_FIREBASE_API_KEY: AIzaSyAtV8EYv4Dka1Ba35pURTaHWQHdm5IZX_o
       #with:
