--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -35,6 +35,6 @@ jobs:
       #uses: JamesIves/github-pages-deploy-action@v4
     - run: npm run deploy
       env:
-        VITE_FIREBASE_API_KEY: AIzaSyAtV8EYv4Dka1Ba35pURTaHWQHdm5IZX_o
+        VITE_FIREBASE_API_KEY: 'AIzaSyAtV8EYv4Dka1Ba35pURTaHWQHdm5IZX_o'
       #with:
         #folder: ./client/dist # The folder the action should deploy.
