--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,7 +32,7 @@ jobs:
     #- run: npm test
 
     - name: Deploy 🚀
-      #uses: JamesIves/github-pages-deploy-action@v4
+      uses: JamesIves/github-pages-deploy-action@v4
     - run: npm run deploy
       #with:
         #folder: ./client/dist # The folder the action should deploy.
