--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "@million/lint": "^0.0.73",
     "@reduxjs/toolkit": "^2.2.1",
     "@tanstack/react-query": "^5.28.14",
-    "axios": "^1.6.7",
+    "axios": "^1.7.5",
+    "cheerio": "^1.0.0",
     "firebase": "^10.9.0",
     "flowbite-react": "^0.7.2",
     "gh-pages": "^6.1.1",
