--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Deloy my Blog project using Github Action
+name: Deploy Blog to GitHub Pages
 
 on:
   push:
@@ -10,29 +10,31 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
-
+  build-and-deploy:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: 18
         cache: 'npm'
-    - run: cd ./client
-    - run: npm ci
-    - run: npm run build --if-present
-    #- run: npm test
+        cache-dependency-path: './client/package-lock.json'
 
-    - name: Deploy 🚀
+    - name: Install dependencies
+      working-directory: ./client
+      run: npm ci
+
+    - name: Build project
+      working-directory: ./client
+      run: npm run build
+
+    - name: Deploy to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@v4
-    - run: npm run deploy
-      #with:
-        #folder: ./client/dist # The folder the action should deploy.
+      with:
+        folder: ./client/dist # Thư mục chứa build output
+        branch: gh-pages # Branch để deploy
+        token: ${{ secrets.GITHUB_TOKEN }} # GitHub tự động cung cấp token này
