--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,4 +1,7 @@
-name: Deploy Client to GitHub Pages
+# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
+# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
+
+name: Deloy my Blog project using Github Action
 
 on:
   push:
@@ -7,33 +10,33 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build-and-deploy:
+  build:
+
     runs-on: ubuntu-latest
 
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+    strategy:
+      matrix:
+        node-version: [20.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
-    - name: Set up Node.js
+    steps:
+    - uses: actions/checkout@v3
+    - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
-        node-version: 20
+        node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        cache-dependency-path: './client/package-lock.json'
+    - run: cd ./client
+    - run: npm ci
+    - run: npm run build --if-present
+    #- run: npm test
 
-    - name: Install dependencies
-      working-directory: ./client
-      run: npm ci
-
-    - name: Build project
-      working-directory: ./client
-      run: npm run build
-      env:
-        VITE_FIREBASE_API_KEY: ${{ secrets.VITE_FIREBASE_API_KEY }}
-
-    - name: Deploy to GitHub Pages
+    - name: Deploy 🚀
       uses: JamesIves/github-pages-deploy-action@v4
       with:
         folder: ./client/dist
         branch: gh-pages
         token: ${{ secrets.GITHUB_TOKEN }}
+    - run: npm run deploy
+      #with:
+        #folder: ./client/dist # The folder the action should deploy.
