--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,8 +28,9 @@ jobs:
         cache: 'npm'
     - run: cd ./client
     - run: npm ci
-    - run: npm run build --if-present
-    #- run: npm test
+    - run: npm run build
+      working-directory: ./client
+    - run: npm run deploy
 
     - name: Deploy 🚀
       uses: JamesIves/github-pages-deploy-action@v4
@@ -37,6 +38,5 @@ jobs:
         folder: ./client/dist
         branch: gh-pages
         token: ${{ secrets.GITHUB_TOKEN }}
-    - run: npm run deploy
-      #with:
+    #with:
         #folder: ./client/dist # The folder the action should deploy.
