--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,9 +32,7 @@ jobs:
       working-directory: ./client
     # Thay thế lệnh deploy bằng một lệnh cụ thể để triển khai
     - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
+      uses: peaceiris/actions-gh-pages@v4
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
         publish_dir: ./client/dist
-        # Thêm dòng sau để sử dụng token cá nhân nếu cần
-        personal_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
