--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,29 +10,31 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
-
+  build-and-deploy:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [20.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+    permissions:
+      contents: write
+      pages: write
+      id-token: write
 
     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
+
+    - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm install
+        node-version: '20'
+
+    - name: Install dependencies
+      run: npm ci
       working-directory: ./client
-    - run: npm run build
+
+    - name: Build
+      run: npm run build
       working-directory: ./client
-    # Thay thế lệnh deploy bằng một lệnh cụ thể để triển khai
+
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v4
       with:
-        github_token: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./client/dist
