--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -38,3 +38,7 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./client/dist
+
+    - name: Get deployment URL
+      run: |
+        echo "Deployment URL: https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/"
