--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,9 +1,11 @@
 # This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
 # For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
 
-name: Deploy Client to GitHub Pages
+name: Deploy Client and Publish Package
 
 on:
+  release:
+    types: [created]
   push:
     branches: [ "main" ]
   pull_request:
@@ -43,3 +45,22 @@ jobs:
       with:
         folder: ./client/dist
         branch: gh-pages
+
+  publish-gpr:
+    needs: build-and-deploy
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          registry-url: https://npm.pkg.github.com/
+      - run: npm ci
+        working-directory: ./client
+      - run: npm publish
+        working-directory: ./client
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
