--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -58,7 +58,7 @@ jobs:
         with:
           node-version: 20
           registry-url: https://npm.pkg.github.com/
-      - run: npm ci
+      - run: npm install
         working-directory: ./client
       - run: npm publish
         working-directory: ./client
