--- a/client/package.json
+++ b/client/package.json
@@ -6,10 +6,10 @@
   "private": false,
   "version": "0.0.2",
   "type": "module",
-  "homepage": "https://capuchinojt.github.io/sample-mern-blog/",
+  "homepage": "https://capuchinojt.github.io/sample-mern-blog",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --base=/sample-mern-blog/",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
